syntax = "proto3";

import "constants.proto";

message Order {
  string order_id = 0;
	string base_symbol = 1;
	string counter_symbol = 2;
  OrderStatus status = 3;
  int64 fill_amount = 4;
}

message WatchMarket {
	string base_symbol = 0;
	string counter_symbol = 1;
}

service OrderBook {
  rpc WatchMarket (WatchMarket) returns (stream Order);
}
