syntax = "proto3";

import "google/protobuf/empty.proto";
import "constants.proto";

message CreateFillRequest {
  string order_id = 0;
  bytes swap_hash = 1;
  int64 fill_amount = 2;
  string taker_pay_to = 3;
}

message CreateFillResponse {
  string fill_id = 0;
  string fee_payment_request = 1;
  string deposit_payment_request = 2;
}

message FillOrderRequest {
  string fill_id = 0;
  string deposit_refund_payment_request = 1;
  string fee_refund_payment_request = 2;
}

message SubscribeExecuteRequest {
  string fill_id = 0;
}

message SubscribeExecuteResponse {
  string pay_to = 0;
}

service TakerService {
  rpc CreateFill (CreateFillRequest) returns (CreateFillResponse);
  rpc FillOrder (FillOrderRequest) returns (google.protobuf.Empty);
  rpc SubscribeExecute (SubscribeExecuteRequest) returns (stream SubscribeExecuteResponse);
}
